# mcp_systems_setup_repo

./: .gitignore  README.md  Ricks_KB.txt  building_mcp_with_llms.md  devbox.json  main.py  mcp-tutorial.md  mcp_client.py  mcp_server.py  pyproject.toml  rick_client.py  rick_server.py  simple_client.py  simple_llama_chat.py  simple_server.py
