[project]
name = "mcp-systems-setup-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.29.3",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "llama-cpp-python>=0.3.8",
    "mcp[cli]>=1.6.0",
]

[tool.uv.workspace]
members = ["test"]
